# Tank-Game-Ex2

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  board_errors.txt  input1.txt  input2.txt  output.txt  output_input1.txt  output_input2.txt  output_input3.txt
common/: ActionRequest.h  BattleInfo.h  DefensiveTankAlgorithm.cpp  DefensiveTankAlgorithm.h  GameSatelliteView.cpp  GameSatelliteView.h  MyPlayerFactory.cpp  MyPlayerFactory.h  MyTankAlgorithm.cpp  MyTankAlgorithm.h  MyTankAlgorithmFactory.cpp  MyTankAlgorithmFactory.h  OffensiveTankAlgorithm.cpp  OffensiveTankAlgorithm.h  PathFinder.cpp  PathFinder.h  Player.cpp  Player.h  Player1.cpp  Player1.h  Player2.cpp  Player2.h  PlayerFactory.cpp  PlayerFactory.h  RoundInfo.h  SatelliteBattleInfo.h  SatelliteView.h  TankAlgorithm.cpp  TankAlgorithm.h  TankAlgorithmFactory.cpp  TankAlgorithmFactory.h
constants/: BoardConstants.h
game_management/: BoardReader.cpp  BoardReader.h  GameManager.cpp  GameManager.h  MovableObject.cpp  MovableObject.h  OutputWriter.cpp  OutputWriter.h  Shell.cpp  Shell.h  TankInfo.cpp  TankInfo.h
